package biblioteca;

public class Autor {
    private String nombre;
    private String nacionalidad;
    private int fechaNacimiento;
}
