package biblioteca;

public enum Genero {
    NOVELA,
    TEATRO,
    POESIA,
    ENSAYO
}
