package biblioteca;

/**
 * La clase <code>Libro</code> alberga los atributos de Libro del paquete biblioteca.
 * de ella pueden heredar otras clases
 * @author Marcus Skelly
 * @version 1.0
 * @since 1.0
 */
public class Libro {

}
