package biblioteca;

import java.time.LocalDate;


/**
 * La clase <code>Multa</code> indica la fecha de las multas recibidas por un socio <code>Socio</code>
 * @author Marcus Skelly
 * @see Socio
 * @version 1.0
 * @since 1.0
 */

public class Multa {

    private LocalDate fecha;

}
