package biblioteca;

public class Socio {
    private int numero;
    private String nombre;
    private String direccion;
    private String telefono;

    public class Prestamo{
        public int fechaInicio;
        public int fechaFin;
    }
}
